@@ -1,2 +1,28 @@
-requires 'OX' => '0.14'; # https://github.com/iinteractive/OX/commit/43929db93a25683fdbf751a3751989ac929eca8b
-requires 'Test::Path::Router';
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.017
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
+requires "Moose" => "0";
+requires "OX::RouteBuilder" => "0";
+requires "Try::Tiny" => "0";
+requires "namespace::autoclean" => "0";
+
+on 'build' => sub {
+  requires "Module::Build" => "0.28";
+};
+
+on 'test' => sub {
+  requires "File::Spec" => "0";
+  requires "File::Temp" => "0";
+  requires "IO::Handle" => "0";
+  requires "IPC::Open3" => "0";
+  requires "OX" => "0";
+  requires "Plack::Test" => "0";
+  requires "Test::More" => "0";
+  requires "Test::Path::Router" => "0";
+  requires "lib" => "0";
+  requires "perl" => "5.006";
+};
+
+on 'configure' => sub {
+  requires "Module::Build" => "0.28";
+};
