@@ -1,40 +1,8 @@
 name    = OX-RouteBuilder-REST
-author  = Thomas Klausner <domm@cpan.org>
+author  = Thomas Klausner <domm@plix.at>
 author  = Validad GmbH http://validad.com
 license = Perl_5
 copyright_holder = Thomas Klausner
-copyright_year   = 2014
+copyright_year   = 2014 - 2021
 
-[GatherDir]
-include_dotfiles = 1
-exclude_match = local
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[License]
-[Readme]
-[ExecDir]
-[ShareDir]
-[Repository]
-
-[MetaResources]
-
-[CheckChangeLog]
-
-[Manifest]
-
-[TestRelease]
-[ConfirmRelease]
-
-[AutoPrereqs]
-skip = ^Example.*
-
-[VersionFromModule]
-[ModuleBuild]
-[PodWeaver]
-
-[InstallGuide]
-[MetaJSON]
-
-[@Git]
-
+[@Author::DOMM]
