@@ -1,5 +1,9 @@
 Revision history for OX::RouteBuilder::REST
 
+{{$NEXT}}
+    - dist housekeeping, Dist::Zilla::PluginBundle::Author::DOMM
+
+
 0.003   2014-04-04T08:42:34+0200
     - auto-registering OX::RouteBuilder::REST now works with OX 0.14
 
